@startuml

Domain <--* App
App --o Service
App <.left. AppInstance
Service <.left. ServiceInstance

class Domain {
id: DomainId
name: DomainName
}

class App {
domain_id: DomainId
id: AppId
name: AppName
version: semver::Version
services: HashSet<Service>
}

class Service {
id: ServiceId
name: ServiceName
version: semver::Version
}

class AppInstance {
app: App
instance_id: AppInstanceId
}

class ServiceInstance {
service: Service
instance_id: ServiceInstanceId
}


@enduml